[gd_scene load_steps=11 format=3 uid="uid://bk2hbkabxjm7e"]

[ext_resource type="Theme" uid="uid://b8o6p1tkrcyh8" path="res://assets/themes/mainScreen.tres" id="1_8fir6"]
[ext_resource type="Script" uid="uid://ijvhahj1d6hl" path="res://models/saving_goal_maker.gd" id="2_op3nj"]
[ext_resource type="Texture2D" uid="uid://d34k82ycxei5u" path="res://assets/ui/icons/Back Arrow.png" id="2_toj3i"]
[ext_resource type="Texture2D" uid="uid://cp55l1soxy3vx" path="res://assets/ui/icons/Trophy.png" id="4_ghnlt"]
[ext_resource type="Texture2D" uid="uid://bhse3s1xiw26b" path="res://assets/ui/icons/Calendar.png" id="5_8bija"]
[ext_resource type="Texture2D" uid="uid://dkn5t4we4nvrb" path="res://assets/ui/icons/Camera.png" id="6_dl64n"]
[ext_resource type="ButtonGroup" uid="uid://p8jx8mtkudlf" path="res://controllers/savings_group.tres" id="7_u0hoq"]
[ext_resource type="ButtonGroup" uid="uid://d3orumgmmllgd" path="res://controllers/reg_saving_group.tres" id="8_op3nj"]

[sub_resource type="Theme" id="Theme_1rgwa"]

[sub_resource type="Theme" id="Theme_oubmr"]

[node name="SavingGoalMaker" type="ScrollContainer"]
clip_contents = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
script = ExtResource("2_op3nj")
saving_selection_group = ExtResource("7_u0hoq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_8fir6")

[node name="Panel" type="Panel" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_8fir6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
texture = ExtResource("2_toj3i")
expand_mode = 3

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "[b]Link Bank Account[/b]"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"PanelNestedContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"MarginNestedContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Choose What Triggers Your Saving[/b]"
vertical_alignment = 1

[node name="SpendSaveBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("7_u0hoq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_ghnlt")
expand_mode = 3

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Spending Save[/b]"
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/SpendSaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Save After Spending"
vertical_alignment = 1

[node name="RegSaveBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("7_u0hoq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_8bija")
expand_mode = 3

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Regular Savings[/b]"
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/RegSaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Daily/Monthly/Weekly Fixed Deposit"
vertical_alignment = 1

[node name="PaySaveBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("7_u0hoq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_dl64n")
expand_mode = 3

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Paycheck Saving[/b]"
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PaySaveBtn/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Save After Receiving Direct Deposit"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SpendingControls" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpendSave" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Deposit Rule After Consumption[/b]"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"PanelNestedContainer"

[node name="SavingControls" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"MarginNestedContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave/PanelContainer/SavingControls"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave/PanelContainer/SavingControls/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Save 5% of spending automatically"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/SpendSave/PanelContainer/SavingControls/VBoxContainer"]
modulate = Color(0.658824, 0.815686, 0.227451, 1)
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="RegSave" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Choose What Triggers Your Saving[/b]"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"PanelNestedContainer"

[node name="SavingControls" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"MarginNestedContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Saving Amount"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = SubResource("Theme_1rgwa")
text = "$ "

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer"]
layout_mode = 2

[node name="BankButton3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("8_op3nj")
text = "Daily"

[node name="BankButton4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("8_op3nj")
text = "Weekly"

[node name="BankButton5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/RegSave/PanelContainer/SavingControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
toggle_mode = true
button_group = ExtResource("8_op3nj")
text = "Monthly
"

[node name="PaySave" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Deposit Rule After Consumption[/b]"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"PanelNestedContainer"

[node name="SavingControls" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"MarginNestedContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Save 5% of payout automatically"
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls/VBoxContainer"]
modulate = Color(0.658824, 0.815686, 0.227451, 1)
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"GreyText"
bbcode_enabled = true
text = "Only save if payout > $500"
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/PaySave/PanelContainer/SavingControls/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.627451, 0.741176, 0.32549, 1)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("1_8fir6")
theme_type_variation = &"NavButton"

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NamingSaveGoal" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "[b]Saving Goal Name[/b]"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = SubResource("Theme_1rgwa")
placeholder_text = "My Saving Goal..."
max_length = 75
clear_button_enabled = true

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"PanelNestedContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_8fir6")
theme_type_variation = &"MarginNestedContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_8fir6")
bbcode_enabled = true
text = "Deadline"
vertical_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpendingControls/NamingSaveGoal/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = SubResource("Theme_oubmr")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "JANUARY/16/2026"
icon_alignment = 1

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_oubmr")
theme_type_variation = &"ProceedButton"
text = "Create Saving Goal"
